--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 
 <body style="background-color: black; color: white;">
 	<div id="root">
-		<h1>Not Rendered</h1>
+		<h1 id='test'>Not Rendered</h1>
 	</div>
 
-
-	<script type="module" src="script.js"></script>
+	<script type="module" src="./script.js"></script>
 </body>
 
 </html>
